[package]
name = "foxglove-websocket-rs"
version = "0.1.0"
authors = ["Micah Chambers (eos) <mchambers@anduril.com>"]
edition = "2021"
publish = ["artifactory"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0"
async-trait = "0.1"
log = "0"

[dev-dependencies]
env_logger = "0"
