
[profile.release]
debug = true
panic = 'abort'

[profile.dev]
panic = 'abort'


[workspace]
resolver = "2"
members = [
    "foxglove-protos",
    "foxglove-websocket",
]

[workspace.dependencies]
prost = ">=0.12"
prost-reflect = { version = ">=0.12", features = ["derive", "serde" ] }
prost-build = ">=0.12"
prost-reflect-build = { version = ">=0.12.0" }
prost-wkt-types = ">=0.4.2"
#convert_case = "0.6"
prost-types = "*"
#tonic = { version = "*" }
#mio = {version = "1", features = ["net"] }
#tokio = { version = "1", features = ["full"] }
#serde = { version = "1", features = ["derive"] }
#serde_json = "1"
#serde_yaml = "*"
#schemars = "0.8"
#env_logger = "0.10"
#log = "0.4"
#anyhow = "1"
once_cell = "1"
#base64 = "0.22"
